# worldmap

./: .gitignore  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
backend/: .env.example  Cargo.toml
backend/src/: cache_proxy.rs  db.rs  main.rs  state.rs  ws_fanout.rs
backend/src/routes/: alerts.rs  events.rs  export.rs  flights.rs  history.rs  mod.rs  reactors.rs  ships.rs  static_data.rs  tiles.rs  traffic.rs  watchlist.rs  weather.rs
frontend/: .env.example  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/layers/: AirportsLayer.ts  AtoNLayer.ts  Buildings3DLayer.ts  EnergyInfraLayer.ts  EventRadiusLayer.ts  FlightsLayer.ts  HistoryShipsLayer.ts  PipelinesLayer.ts  PowerGridLayer.ts  ReactorsLayer.ts  SeaportsLayer.ts  ShipsLayer.ts  TrafficLayer.ts  WeatherLayer.ts  useLayers.ts
frontend/src/map/: MapContainer.tsx
frontend/src/store/: alerts.ts  events.ts  flightDetail.ts  history.ts  layers.ts  popup.ts  shipDetail.ts  viewport.ts  watchlist.ts
frontend/src/ui/: AlertPanel.tsx  Attribution.tsx  BusinessToolbar.tsx  EventPanel.tsx  ExportMenu.tsx  FlightDetailPanel.tsx  InfoPopup.tsx  LayerPanel.tsx  MapControls.tsx  Search.tsx  ShipDetailPanel.tsx  TimeSlider.tsx  WatchlistPanel.tsx  WeatherLegend.tsx
scripts/: _test_acled.py  build_grid_tiles.sh  build_pipeline_tiles.sh  build_tiles.sh  dev.sh  ingest_acled.py  ingest_airports.py  ingest_reactors.py  ingest_seaports.py  setup.sh  test_api.py
