[package]
name = "worldmap-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1"
reqwest = { version = "0.12", features = ["json", "stream", "gzip"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
dashmap = "6"
futures-util = "0.3"
